# WindWaker-decomp

./: .gitignore  CMakeLists.txt  README.md  Readme.md  SComponent.cpp  SComponent.h  c_dylink.cpp  c_dylink.h  dDlst.h  d_resorce.cpp  d_resorce.h  doltypes.h  processed.json
JFramework/: JFWDisplay.cpp  JFWDisplay.h  JFWSystem.cpp  JFWSystem.h  JGadget.cpp  JGadget.h
JFramework/J2D/: J2DPrint.cpp  J2DPrint.h
JFramework/J2DGraph/: J2DGrafContext.cpp  J2DGrafContext.h  J2DGraph.cpp  J2DGraph.h  J2DOrthoGraph.cpp  J2DOrthoGraph.h
JFramework/J3D/: J3DSys.cpp  J3DSys.h
JFramework/JKernel/: JKRAram.cpp  JKRAram.h  JKRAramArchive.cpp  JKRAramArchive.h  JKRAramHeap.cpp  JKRAramHeap.h  JKRAramPiece.cpp  JKRAramPiece.h  JKRArchive.cpp  JKRArchive.h  JKRDecomp.cpp  JKRDecomp.h  JKRDisposer.cpp  JKRDisposer.h  JKRDvdAramRipper.cpp  JKRDvdAramRipper.h  JKRDvdArchive.cpp  JKRDvdArchive.h  JKRDvdFinder.cpp  JKRDvdFinder.h  JKRDvdRipper.cpp  JKRDvdRipper.h  JKRExpHeap.cpp  JKRExpHeap.h  JKRFileCache.cpp  JKRFileCache.h  JKRHeap.cpp  JKRHeap.h  JKRMemArchive.cpp  JKRMemArchive.h  JKRSolidHeap.cpp  JKRSolidHeap.h  JKRThread.cpp  JKRThread.h  JKRThreadSwitch.cpp  JKRThreadSwitch.h  JKernel.cpp  JKernel.h
JFramework/JSupport/: JSUIosBase.cpp  JSUIosBase.h  JSUPtrLink.cpp  JSUPtrLink.h  JSUPtrList.cpp  JSUPtrList.h
JFramework/JUtility/: JUTAssert.cpp  JUTAssert.h  JUTConsole.cpp  JUTConsole.h  JUTConsoleManager.cpp  JUTConsoleManager.h  JUTDbPrint.cpp  JUTDbPrint.h  JUTDirectPrint.h  JUTException.cpp  JUTException.h  JUTFader.cpp  JUTFader.h  JUTFont.cpp  JUTFont.h  JUTGamePad.cpp  JUTGamePad.h  JUTGraphFifo.cpp  JUTGraphFifo.h  JUTProcBar.cpp  JUTProcBar.h  JUTVideo.cpp  JUTVideo.h  JUTXfb.cpp  JUTXfb.h  JUtility.cpp  JUtility.h
SComponent/: c_malloc.cpp  c_malloc.h
dolphin/: ar.h  base.h  card.h  gx.h  os.h  pad.h  types.h  vi.h
dolphin/base/: PPCArch.h  PPCWGPipe.h
dolphin/gx/: GXBump.h  GXCpu2Efb.h  GXCull.h  GXDispList.h  GXEnum.h  GXFifo.h  GXGet.h  GXInit.h  GXPerf.h  GXTev.h  GXTexture.h  GXTransform.h  GXVerify.h  GXVert.h
dolphin/os/: OSAlarm.h  OSAlloc.h  OSBootInfo.h  OSCache.h  OSContext.h  OSDC.h  OSError.h  OSException.h  OSExpansion.h  OSFastCast.h  OSFont.h  OSIC.h  OSInterrupt.h  OSLC.h  OSMemory.h  OSMessage.h  OSModule.h  OSMutex.h  OSReset.h  OSResetSW.h  OSSemaphore.h  OSSerial.h  OSThread.h
dolphin/vi/: vifuncs.h  vitypes.h
f_ap/: game.h
f_op/: camera.cpp  camera.h  draw.cpp  draw.h  overlap.h  overlap_mng.cpp  overlap_req.cpp  scene.h  scene_mng.cpp  scene_pause.cpp  scene_req.cpp
f_pc/: base.cpp  base.h  creator.h  creator_iter.cpp  creator_req.cpp  creator_tag.cpp  deletor.cpp  deletor.h  deletor_tag.cpp  draw.cpp  draw.h  executor.cpp  executor.h  layer.cpp  layer.h  layer_iter.cpp  layer_tag.cpp  leaf.h  line.cpp  line.h  line_tag.cpp  load.cpp  load.h  manager.cpp  manager.h  method.cpp  method.h  method_iter.cpp  method_tag.cpp  node.h  node_req.cpp  pause.cpp  pause.h  priority.cpp  priority.h  profile.h  searcher.cpp  searcher.h  stdcreate.cpp  stdcreate.h
includes/: DynamicLink.h  JAudioJASCalc.h  JFrameworkJFWDisplay.h  JPABaseJPAEmitter.h  JPABaseJPAField.h  JPADrawJPADrawVisitor.h  JPALoaderJPABaseShape.h  JPALoaderJPAEmitterLoader.h  JStudio_JAudiocontrol.h  JStudio_JAudioobject-sound.h  JStudio_JMessagecontrol.h  JStudio_JParticlecontrol.h  JStudio_JStageobject-actor.h  JStudio_JStageobject-camera.h  JStudiofvb-data-parse.h  JStudiofvb.h  JStudiojstudio-control.h  JStudiojstudio-math.h  JStudiostb.h  c_damagereaction.h  c_dylink.h  d_2dnumber.h  d_a_agb.h  d_a_arrow.h  d_a_bg.h  d_a_boko_static.h  d_a_bomb.h  d_a_bomb2.h  d_a_bomb_static.h  d_a_boomerang.h  d_a_dai_item.h  d_a_demo00.h  d_a_disappear.h  d_a_esa.h  d_a_grid.h  d_a_himo2.h  d_a_hookshot.h  d_a_ib.h  d_a_item.h  d_a_itembase.h  (+188 more)
includes/J2DGraph/: J2DGrafContext.h  J2DOrthoGraph.h  J2DPane.h  J2DPicture.h  J2DPrint.h  J2DScreen.h  J2DTextBox.h  J2DWindow.h
includes/J3DGraphAnimator/: J3DAnimation.h  J3DCluster.h  J3DJoint.h  J3DMaterialAnm.h  J3DMaterialAttach.h  J3DModel.h  J3DModelData.h  J3DNode.h  J3DVisibility.h
includes/J3DGraphBase/: J3DDrawBuffer.h  J3DGD.h  J3DMatBlock.h  J3DMaterial.h  J3DPacket.h  J3DShape.h  J3DShapeMtx.h  J3DSys.h  J3DTevs.h  J3DTransform.h
includes/J3DGraphLoader/: J3DAnmLoader.h  J3DClusterLoader.h  J3DJointFactory.h  J3DMaterialFactory.h  J3DModelLoader.h  J3DShapeFactory.h
includes/JAZelAudio/: JAIZelAnime.h  JAIZelBasic.h  JAIZelInst.h  JAIZelSound.h
includes/JAudio/: JAIAnimation.h  JAIBankWave.h  JAIBasic.h  JAIConst.h  JAIDummyObject.h  JAIFx.h  JAIGlobalParameter.h  JAIInitData.h  JAISeMgr.h  JAISequenceHeap.h  JAISequenceMgr.h  JAISound.h  JAISoundTable.h  JAIStreamMgr.h  JAISystemInterface.h  JASAiCtrl.h  JASAudioThread.h  JASBNKParser.h  JASBank.h  JASBankMgr.h  JASBasicBank.h  JASBasicInst.h  JASBasicWaveBank.h  JASCalc.h  JASCallback.h  JASChAllocQueue.h  JASChGlobal.h  JASChannel.h  JASCmdStack.h  JASDSPBuf.h  JASDSPChannel.h  JASDSPInterface.h  JASDriverIF.h  JASDrumSet.h  JASDvdThread.h  JASHardStream.h  JASHeapCtrl.h  JASInstRand.h  JASInstSense.h  JASOscillator.h  (+14 more)
includes/JFramework/: JFWDisplay.h  JFWSystem.h
includes/JGadget/: binary.h  std-vector.h
includes/JKernel/: JKRAram.h  JKRAramArchive.h  (+22 more)
linux_sdk/: base.cpp  card.cpp  dvd.cpp  gx.cpp  os.cpp  pad.cpp  test.cc  vi.cpp
rels/: CMakeLists.txt
src/: DynamicLink.cpp  SComponent.cpp  SComponent.h  c_damagereaction.cpp  c_dylink.cpp  c_dylink.h  dDlst.cpp  dDlst.h  d_2dnumber.cpp  d_a_agb.cpp  d_a_arrow.cpp  d_a_bg.cpp  d_a_boko_static.cpp  d_a_bomb.cpp  d_a_bomb2.cpp  d_a_bomb_static.cpp  d_a_boomerang.cpp  d_a_branch_static.cpp  d_a_dai_item.cpp  d_a_demo00.cpp  d_a_disappear.cpp  d_a_esa.cpp  d_a_grid.cpp  d_a_himo2.cpp  d_a_hookshot.cpp  d_a_ib.cpp  d_a_item.cpp  d_a_item_static.cpp  d_a_itembase.cpp  d_a_itembase_static.cpp  d_a_leaflift_static.cpp  d_a_mgameboard_static.cpp  d_a_nh.cpp  d_a_npc_cb1_static.cpp  d_a_npc_fa1.cpp  d_a_npc_mk_static.cpp  d_a_obj.cpp  d_a_obj_search.cpp  d_a_obj_tribox_static.cpp  d_a_player.cpp  (+196 more)
tools/: infer.cpp
(+947 files in other folders)
